--- a/Resources/Prototypes/Entities/Structures/Doors/Shutter/blast_door.yml
+++ b/Resources/Prototypes/Entities/Structures/Doors/Shutter/blast_door.yml
@@ -37,7 +37,7 @@
     containers:
     - board
   - type: StaticPrice
-    price: 500
+    price: 280 # Frontier: 500<280 - TODO: material value rework
 
 - type: entity
   id: BlastDoorOpen
